--- a/style.css
+++ b/style.css
@@ -47,12 +47,12 @@ label {
 .text-center {
   text-align: center;
   text-transform: uppercase;
-  font-family: cursive;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(127, 255, 212, 0.24);
 }
 
 #resultado-container h3 {
-  font-family: cursive;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .resultado-imagem {
   margin-top: 20px;
