--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #bce5fd17;
+  background-color: #fd43430c;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,11 +8,12 @@ body {
   margin: 0;
 }
 
+
 .calc { 
   background-color: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
   text-align: center;
 }
 
@@ -47,12 +48,12 @@ label {
 .text-center {
   text-align: center;
   text-transform: uppercase;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: rgba(127, 255, 212, 0.24);
 }
 
 #resultado-container h3 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .resultado-imagem {
   margin-top: 20px;
